Bugfix: headers overlap menu and make menu unclickable (try not to break scroll bar fix)
When a menu is available and a header is in use, the header somehow overlaps the menu and the menu cannot be clicked or selected.
This was introduced by the mcneese theme commit 9277c24bb3df5088977054e5e900eb636562b81b " Bugfix: try fixing the scroll bar issue by changing display from block to inline".

Try using an inline-block with width set to 100% in attempt to solve both issues..

--- a/sites/all/themes/mcneese/css/screen/screen-flow.css
+++ b/sites/all/themes/mcneese/css/screen/screen-flow.css
@@ -562,11 +562,14 @@
 
 .mcneese .mcneese-content,
 .mcneese .mcneese-content-main {
-  display: inline;
+  display: inline-block;
+  vertical-align: top;
   overflow-x: auto;
 
   margin: 0px;
   padding: 0px;
+
+  width: 100%;
 
   box-sizing: border-box;
   -moz-box-sizing: border-box;
